<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_logo"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:weightSum="1" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp" >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/employeeid"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/text_employee_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vehicleid"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/text_vehicle_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/route"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/text_route"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_employee"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Add or Update" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Data is Sent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/linear_status"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@color/red"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/home_scan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Scan Doctor ID"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="OR"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/home_entry_exit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Hospital is Closed"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <Button
                    android:id="@+id/home_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Settings"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/home_Start_Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Sync Start Date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>